fixed footer on form.html

--- a/Style/style.css
+++ b/Style/style.css
@@ -865,7 +865,7 @@ p {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: flex-end;
+        align-items: center;
     }
 
     .team-levelup {
