--- a/Style/style.css
+++ b/Style/style.css
@@ -15,6 +15,8 @@ body {
 
 :root {
     --red: #FF4655;
+    --grey: #737373;
+    --titleColor: #ece8e1;
 }
 
 
@@ -325,7 +327,7 @@ p {
     flex-direction: column;
     margin-top: 20px;
     font-size: 21px;
-    color: #ece8e1;
+    color: var(--titleColor);
 }
 
 .content-piramid-img {
@@ -367,7 +369,7 @@ p {
     font-family: 'Playfair Display', serif;
     font-size: 60px;
     font-weight: bold;
-    color: #ece8e1;
+    color: var(--titleColor);
     padding-bottom: 20px;
 }
 
@@ -471,7 +473,7 @@ p {
     font-family: 'Playfair Display', serif;
     font-size: 40px;
     font-weight: bold;
-    color: #ece8e1;
+    color: var(--titleColor);
     padding-bottom: 40px;
 }
 
@@ -479,7 +481,7 @@ p {
 
     padding-bottom: 20px;
     line-height: 1.4;
-    color: #ece8e1a9;
+    color: var(--titleColor)a9;
 }
 
 .tournaments p span:first-child {
@@ -546,7 +548,7 @@ p {
     font-family: 'Playfair Display', serif;
     font-size: 40px;
     font-weight: bold;
-    color: #ece8e1;
+    color: var(--titleColor);
     padding-bottom: 40px;
 }
 
@@ -566,7 +568,7 @@ p {
 .teams h3 {
     font-size: 20px;
     padding-top: 20px;
-    color: #ece8e1;
+    color: var(--titleColor);
     text-align: center;
     padding-bottom: 20px;
 }
@@ -643,12 +645,12 @@ p {
     text-transform: uppercase;
     font-size: 30px;
     font-weight: 900;
-    color: #737373;
+    color: var(--grey);
     font-family: "VALORANT", sans-serif;
 }
 
 #esport-footer {
-    color: #737373;
+    color: var(--grey);
     font-size: 15px;
     font-family: "VALORANT", sans-serif;
 }
@@ -672,7 +674,7 @@ p {
 
 .footer-sections li a {
     text-decoration: none;
-    color: #737373;
+    color: var(--grey);
     line-height: 1.3;
 }
 
@@ -696,7 +698,7 @@ p {
 
 .team-levelup a {
     text-decoration: none;
-    color: #737373;
+    color: var(--grey);
 }
 
 
@@ -704,14 +706,14 @@ p {
 .contacts {
     padding: 30px;
     padding-bottom: 20px;
-    color: #737373;
+    color: var(--grey);
     line-height: 1.3;
 }
 
 
 
 .copy {
-    color: #737373;
+    color: var(--grey);
     padding-top: 20px;
     padding-bottom: 20px;
     margin-right: 15px;
@@ -874,7 +876,7 @@ p {
         margin-bottom: 20px;
         margin-left: 50px;
         line-height: 1.3;
-        color: #737373;
+        color: var(--grey);
     }
 
     .team-levelup h2 {
@@ -884,7 +886,7 @@ p {
 
     .contacts {
         margin-right: 50px;
-        color: #737373;
+        color: var(--grey);
         line-height: 1.3;
     }
 
