--- a/Style/style.css
+++ b/Style/style.css
@@ -5,7 +5,7 @@
 body {
     position: absolute;
     font-size: 14px;
-    background: #0f1923;
+    background: var(--background);
     width: 100%;
     font-family: 'Maven Pro', sans-serif;
 
@@ -17,7 +17,8 @@ body {
     
     --grey: #737373;
     --red: #FF4655;
-    --titleColor: #ece8e1;
+    --title: #ece8e1;
+    --background: #0f1923;
 }
 
 
