--- a/Style/tournaments.css
+++ b/Style/tournaments.css
@@ -67,13 +67,14 @@ h6{
     /* border-radius: 5px; */
     border: rgb(75, 75, 75) solid 1px;
     padding: 20px;
+    transition: 0.5s ease-in-out;
 }
 
 .trophy-card:hover{
     background-color: rgb(25, 25, 25);
     box-shadow: 0px 0px 7px 5px rgba(199, 244, 255, 0.629) ;
-    transform: rotate(2deg);
-    transition: 0.5s;
+    padding: 25px;
+    
 }
 
 .footer-container h2{
