--- a/Style/tournaments.css
+++ b/Style/tournaments.css
@@ -1,3 +1,8 @@
+/*
+tournaments.css
+
+display the various tournaments
+*/
 :root {
     --main-red-color: #ff4655;
   }
@@ -68,6 +73,7 @@ h6{
     border: rgb(75, 75, 75) solid 1px;
     padding: 20px;
     transition: 0.5s ease-in-out;
+    height: 333.05px;
 }
 
 .trophy-card:hover{
