--- a/Style/tournaments.css
+++ b/Style/tournaments.css
@@ -13,6 +13,18 @@ h1,h2,h3,h4,h5,h6{
     font-size: larger;
 }
 
+button{
+    background-color: #111;
+    border: #aaaaaa solid 0.1px;
+    color: white;
+    padding: 5px;
+    border-radius: 2px;
+}
+button:hover{
+    background-color: #5e5e5e;
+    color: rgb(0, 0, 0);
+}
+
 p{
     line-height: 30px;
     color: rgb(179, 212, 220);
@@ -32,7 +44,8 @@ h6{
     padding: 2%;
     font-family: 'VALORANT', sans-serif;
     font-size: 40px;
-    color: var(--main-red-color);
+    color: #fff;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff4655, 0 0 40px #ff4655, 0 0 50px #ff4655, 0 0 60px #ff4655, 0 0 70px #ff4655;
     margin-top: 20px;
 }
 
@@ -73,7 +86,8 @@ h6{
     border: rgb(75, 75, 75) solid 1px;
     padding: 20px;
     transition: 0.5s ease-in-out;
-    height: 333.05px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
 }
 
 .trophy-card:hover{
@@ -95,6 +109,69 @@ h6{
     text-decoration:underline;
 }
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 20%; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color:  #0038707d /* Black w/ opacity */
+}
+
+.modal h2{
+    text-align: center;
+    color: rgb(212, 254, 255);
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff4655, 0 0 40px #ff4655, 0 0 50px #ff4655, 0 0 60px #ff4655, 0 0 70px #ff4655;
+    font-size: 40px;
+    font-family:'VALORANT', sans-serif; 
+}
+
+.modal-grid{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 50px;
+}
+
+.modal-card{
+    background-color: #111;
+    color: var(--main-red-color);
+    padding: 5%;
+    border: solid #ffffff 1px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: justify;
+}
+.modal-card h3{
+    color: var(--main-red-color);
+}
+
+/* Modal Content */
+.modal-content {
+    margin: auto;
+    padding: 20px;
+    width: 60%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    margin-right: 5%;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: var(--main-red-color);
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 
 
@@ -109,12 +186,18 @@ h6{
 @media screen and (min-width: 750px){
     .containercards{
       grid-template-columns: 1fr 1fr;
-  }  
+  }
+  .modal-grid{
+
+    grid-template-columns: 1fr 1fr;
+
+}
   }
 
 @media screen and (min-width: 1200px){
   .containercards{
     grid-template-columns: 1fr 1fr 1fr;
 }  
+
 }
 
